--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -2,6 +2,14 @@ body {
     font-family: 'Neuton', serif;
     height: 100vh;
 }
+a {
+  font-family: 'Bree Serif', serif;
+  font-size: 40px;
+  margin: auto;
+  padding-bottom: 1px;
+  color: black;
+  text-decoration: none;
+}
 #container {
     border: 15px dashed #FF2776;
     background: #FFFC2A;
@@ -22,10 +30,10 @@ body {
     align-items: center;
 }
 .settings-link {
-  display: inline-block;
-  margin: 10px;
-  font-size: 20px;
-  border-bottom: 3px solid #23D831;
+  font-size: 15px;
+  position: fixed;
+  right: 20px;
+  top: 10px;
 }
 .extended-local {
   margin-left: 2px;
@@ -57,18 +65,10 @@ body {
 .current-pinned {
   font-size: 35px;
 }
-a {
-  font-family: 'Bree Serif', serif;
-  font-size: 60px;
-  margin: auto;
-  padding-bottom: 1px;
-  border-bottom: 5px solid #23D831;
-  color: black;
-  text-decoration: none;
-}
 #current-forecast, .pinned-weather {
-    display: flex;
-    height: 40px;
+    display: inline-block;
+    height: 80px;
+    width: 30%;
     font-size: 14px;
     font-weight: bolder;
     padding: 5px;
