Update weather card CSS

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -19,7 +19,6 @@ a {
     text-align: center;
 }
 #header {
-    display: flex;
     height: 50px;
     margin: 15px;
     width: 100%;
@@ -31,6 +30,7 @@ a {
     color: #FF2776;
     margin: 10px;
     align-items: center;
+    display: inline-block;
 }
 .dashboard-container {
   margin-top: 35px;
@@ -70,16 +70,17 @@ a {
 .pinned-weather {
   display: flex;
   height: 80px;
-  width: 30%;
+  width: 32%;
   font-size: 14px;
   font-weight: bolder;
   text-align: center;
   border: 2px solid black;
   border-radius: 5px;
   box-shadow: -5px 5px 5px #888888;
+  background: #ebebeb;
 }
 .current-forecast {
-  display: flex;
+  display: inline-block;
   align-items: center;
   width: 65%;
   font-size: 14px;
@@ -97,44 +98,21 @@ a {
     margin: 10px;
 }
 #input-container, .cities {
-   padding-top: 20px;
-   padding-bottom: 20px;
+  padding-top: 20px;
    display: flex;
-   height: 60px;
-   width: 400px;
+   width: 200px;
    margin: auto;
-   align-items: center;
-   justify-content: space-between;
 }
 #submitbtn, #deletebtn {
-    font-size: 13px;
-    width: 120px;
-    height: 48px;
-    color: white;
-    margin-left: 20px;
-    border-radius: 5%;
-    border-color: #2785FF;
-    border-width: 8px;
-    background-color: #23D831;
+
+}
+button {
+  font-size: 13px;
 }
 #deletebtn {
   font-size: 12px;
   width: 100px;
   height: 40px;
-}
-#zip-input {
-    height: 30px;
-    font-size: 22px;
-    outline-color: #24E86E;
-    border-radius: 5%;
-    padding: 8px;
-    text-align: center;
-}
-input:focus {
-    outline-color: #23D831
-}
-button:focus {
-    outline-color: #23D831;
 }
 button:enabled {
     cursor: pointer;
