--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,6 +3,7 @@
 body {
     font-family: 'Lato', sans-serif;
     height: 100vh;
+    background: aliceblue;
 }
 a {
   font-family: 'Lato', sans-serif;
@@ -12,6 +13,10 @@ a {
   color: black;
   text-decoration: none;
 }
+#root {
+  width: 72vw;
+  margin: auto;
+}
 #container {
     border: 15px dashed #FF2776;
     background: #FFFC2A;
@@ -19,18 +24,21 @@ a {
     text-align: center;
 }
 #header {
-    height: 50px;
-    margin: 15px;
+    height: 65px;
     width: 100%;
+    background-color: black;
 }
 .title {
     font-family: 'Lato', sans-serif;
     font-size: 40px;
     font-weight: 400;
-    color: #FF2776;
+    color: #005ab3;
     margin: 10px;
     align-items: center;
     display: inline-block;
+}
+.header-background {
+  height: 75px;
 }
 .dashboard-container {
   margin-top: 35px;
@@ -49,8 +57,8 @@ a {
 }
 .home-link {
   font-size: 20px;
-  display: inline-block;
-  margin-left: 25px;
+  display: inherit;
+  text-align: center;
 }
 .day {
   display: flex;
@@ -82,9 +90,9 @@ a {
 .current-forecast {
   display: inline-block;
   align-items: center;
-  width: 65%;
   font-size: 14px;
   bottom: 0;
+  color: white;
 }
 .month-name, .month-date, .year, .temp-high, .temp-low {
 }
@@ -100,7 +108,7 @@ a {
 #input-container, .cities {
   padding-top: 20px;
    display: flex;
-   width: 200px;
+   width: 188px;
    margin: auto;
 }
 #submitbtn, #deletebtn {
