--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -13,15 +13,15 @@ a {
   color: black;
   text-decoration: none;
 }
-#root {
-  width: 72vw;
-  margin: auto;
-}
 #container {
     border: 15px dashed #FF2776;
     background: #FFFC2A;
     height: 100vh;
     text-align: center;
+}
+.overall-container {
+  position: absolute;
+  width: 100%;
 }
 #header {
     height: 65px;
