--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -44,9 +44,11 @@ a {
   height: 75px;
 }
 .dashboard-container {
-  margin-top: 70px;
   flex-direction: row;
   display: flex;
+  width: 70vw;
+  margin: auto;
+  margin-top: 70px;
 }
 .settings-link {
   font-size: 15px;
