--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,11 +7,18 @@ body {
 }
 a {
   font-family: 'Lato', sans-serif;
-  font-size: 30px;
   margin: auto;
   padding-bottom: 1px;
   color: black;
   text-decoration: none;
+}
+.a-pinned {
+  display: flex;
+  font-size: 30px;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
 }
 #container {
     border: 15px dashed #FF2776;
