--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -12,18 +12,22 @@ a {
   color: black;
   text-decoration: none;
 }
-img {
+.city {
   width: 400px;
   display: inline-block;
   position: relative;
   height: 400px;
-  margin-top: -30px;
   border-radius: 5px;
   z-index: -1;
   opacity: .8;
 }
-.a-pinned {
-  font-size: 30px;
+.float-image-text {
+  display: flex;
+  opacity: .8;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex-direction: column;
 }
 #container {
     border: 15px dashed #FF2776;
@@ -66,6 +70,7 @@ img {
   margin: auto;
   margin-top: 70px;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .settings-link {
   font-size: 15px;
@@ -106,8 +111,17 @@ img {
   border: 2px solid black;
   border-radius: 5px;
   box-shadow: -5px 5px 5px #888888;
+}
+.a-pinned {
+  width: 400px;
+  height: 400px;
   background-color: black;
-  z-index: -2;
+  opacity: 0.9;
+}
+.link-container {
+  width: 400px;
+  height: 400px;
+  display: inline;
 }
 .current-forecast {
   display: inline-block;
@@ -149,7 +163,11 @@ button:disabled {
 }
 .new-city {
   position: relative;
-  bottom: -179px;
   color: white;
-  opacity: 0.7;
+  width: 400px;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  top: -403px;
+  font-size: 40px;
 }
