--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -45,18 +45,22 @@ a {
   background-color: black;
   display: flex;
   align-items: baseline;
+  justify-content: space-between;
 }
 .header-container {
   display: flex;
   justify-content: center;
   background: linear-gradient(rgb(211, 211, 211), 50%, aliceblue);
+  flex-direction: column;
+  align-items: center;
+  height: 155px;
 }
 .title {
     font-family: 'Lato', sans-serif;
     font-size: 40px;
     font-weight: 400;
     color: #005ab3;
-    margin: 10px;
+    margin: 12px 0 0 15px;
     align-items: center;
     display: inline-block;
 }
@@ -68,15 +72,14 @@ a {
   display: flex;
   width: 70vw;
   margin: auto;
-  margin-top: 70px;
+  margin-top: 50px;
   flex-wrap: wrap;
   justify-content: center;
 }
 .settings-link {
   font-size: 15px;
-  align-self: flex-end;
   color: white;
-  margin: 0px 0px 45px 350px;
+  margin-right: 20px;
 }
 .extended-local {
   margin-left: 2px;
@@ -104,14 +107,11 @@ a {
   margin-left: 5px;
 }
 .pinned-weather {
-  height: 400px;
-  width: 400px;
-  font-size: 14px;
   font-weight: bolder;
-  text-align: center;
   border: 2px solid black;
   border-radius: 5px;
   box-shadow: -5px 5px 5px #888888;
+  margin: 10px;
 }
 .a-pinned {
   width: 400px;
@@ -125,18 +125,20 @@ a {
   display: inline;
 }
 .current-forecast {
-  display: inline-block;
+  display: flex;
   align-items: center;
   font-size: 14px;
   bottom: 0;
-  color: white;
+  color: black;
+  height: 50px;
+  padding: 13px
 }
 .month-name, .month-date, .year, .temp-high, .temp-low {
 }
 .icon {
   align-self: flex-end;
 }
-.pinned-weather, .link {
+.link {
     margin: 10px;
 }
 #input-container, .cities {
