--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -3,7 +3,7 @@
 body {
     font-family: 'Lato', sans-serif;
     height: 100vh;
-    background: aliceblue;
+    background: white;
 }
 a {
   font-family: 'Lato', sans-serif;
@@ -11,6 +11,10 @@ a {
   padding-bottom: 1px;
   color: black;
   text-decoration: none;
+}
+br {
+   display: block;
+   margin: 10px 0;
 }
 .city {
   width: 400px;
@@ -42,24 +46,24 @@ a {
 #header {
   height: 70px;
   width: 70vw;
-  background-color: black;
+  border-bottom: solid;
+  border-bottom-color: black;
   display: flex;
   align-items: baseline;
   justify-content: space-between;
 }
 .header-container {
   display: flex;
-  justify-content: center;
-  background: linear-gradient(rgb(211, 211, 211), 50%, aliceblue);
+  background: linear-gradient(aliceblue, 50%, white);
   flex-direction: column;
   align-items: center;
-  height: 155px;
+  height: 200px;
 }
 .title {
     font-family: 'Lato', sans-serif;
     font-size: 40px;
     font-weight: 400;
-    color: #005ab3;
+    color: black;
     margin: 12px 0 0 15px;
     align-items: center;
     display: inline-block;
@@ -72,24 +76,20 @@ a {
   display: flex;
   width: 70vw;
   margin: auto;
-  margin-top: 50px;
   flex-wrap: wrap;
   justify-content: center;
+  border-top: solid;
 }
 .settings-link {
   font-size: 15px;
-  color: white;
+  color: black;
   margin-right: 20px;
-}
-.extended-local {
-  margin-left: 2px;
-  font-size: 16px;
 }
 .home-link {
   font-size: 20px;
   display: inherit;
   text-align: center;
-  color: white;
+  color: black;
 }
 .day {
   display: flex;
@@ -126,12 +126,14 @@ a {
 }
 .current-forecast {
   display: flex;
-  align-items: center;
-  font-size: 14px;
+  font-size: 17px;
   bottom: 0;
   color: black;
-  height: 50px;
-  padding: 13px
+  height: 115px;
+  padding: 13px;
+  flex-wrap: wrap;
+  text-align: center;
+  align-items: center
 }
 .month-name, .month-date, .year, .temp-high, .temp-low {
 }
