--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -17,10 +17,10 @@ br {
    margin: 10px 0;
 }
 .city {
-  width: 400px;
+  width: 350px;
   display: inline-block;
   position: relative;
-  height: 400px;
+  height: 350px;
   border-radius: 5px;
   z-index: -1;
   opacity: .8;
@@ -54,7 +54,7 @@ br {
 }
 .header-container {
   display: flex;
-  background: linear-gradient(aliceblue, 50%, white);
+  background: linear-gradient(rgba(209, 171, 39, 0.4), 50%, white);
   flex-direction: column;
   align-items: center;
   height: 200px;
@@ -74,7 +74,7 @@ br {
 .dashboard-container {
   flex-direction: row;
   display: flex;
-  width: 70vw;
+  width: 50vw;
   margin: auto;
   flex-wrap: wrap;
   justify-content: center;
@@ -114,14 +114,14 @@ br {
   margin: 10px;
 }
 .a-pinned {
-  width: 400px;
-  height: 400px;
+  width: 350px;
+  height: 350px;
   background-color: black;
   opacity: 0.9;
 }
 .link-container {
-  width: 400px;
-  height: 400px;
+  width: 350px;
+  height: 350px;
   display: inline;
 }
 .current-forecast {
@@ -138,7 +138,7 @@ br {
 .settings-form {
   border-top: black;
   border-top-style: solid;
-  width: 70vw;
+  width: 50vw;
   display: flex;
   margin: auto;
   flex-direction: column;
@@ -183,10 +183,10 @@ button:disabled {
 .new-city {
   position: relative;
   color: white;
-  width: 400px;
+  width: 350px;
   display: flex;
   width: 100%;
   height: 100%;
-  top: -403px;
+  top: -100%;
   font-size: 40px;
 }
