--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -16,6 +16,16 @@ br {
    display: block;
    margin: 10px 0;
 }
+tr {
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
+  height: 50px;
+}
+td {
+  align-items: center;
+  vertical-align: middle;
+}
 .city {
   width: 350px;
   display: inline-block;
@@ -24,6 +34,9 @@ br {
   border-radius: 5px;
   z-index: -1;
   opacity: .8;
+}
+.icon {
+  width: 35px;
 }
 .float-image-text {
   display: flex;
@@ -54,7 +67,7 @@ br {
 }
 .header-container {
   display: flex;
-  background: linear-gradient(rgba(209, 171, 39, 0.4), 50%, white);
+  background: linear-gradient(aliceblue, 50%, white);
   flex-direction: column;
   align-items: center;
   height: 200px;
@@ -80,6 +93,11 @@ br {
   justify-content: center;
   border-top: solid;
 }
+.extended-container {
+  flex-direction: column;
+  width: 40vw;
+  margin: auto;
+}
 .settings-link {
   font-size: 15px;
   color: black;
@@ -91,20 +109,10 @@ br {
   text-align: center;
   color: black;
 }
-.day {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  padding: 5px 0;
-  border-top: 5px solid #FF2776;
-}
 #name {
-  margin: 10px 0;
-  margin-left: 40%;
+  margin: 15px;
+  text-align: center;
   font-size: 20px;
-}
-.weekday {
-  margin-left: 5px;
 }
 .pinned-weather {
   font-weight: bolder;
@@ -144,13 +152,24 @@ br {
   flex-direction: column;
   padding-top: 16px;
 }
-.month-name, .month-date, .year, .temp-high, .temp-low {
+.weekday {
+  width: 40px;
 }
-.icon {
-  align-self: flex-end;
+
+.month-name {
+  text-align: center;
+}
+.temp-low {
+  margin: 0 5px 0 0;
 }
 .link {
     margin: 10px;
+}
+.extended-forecast-container {
+  border-top: black;
+  border-top-style: solid;
+  width: 50vw;
+  margin: auto;
 }
 #input-container, .cities {
   padding-top: 20px;
@@ -173,6 +192,10 @@ button {
   width: 75px;
   height: 22px;
   margin: 0 0 0 15px;
+  border-radius: 5px;
+  border: 1px;
+  background: white;
+  color: red;
 }
 button:enabled {
     cursor: pointer;
