--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -119,7 +119,7 @@ td {
   border: 2px solid black;
   border-radius: 5px;
   box-shadow: -5px 5px 5px #888888;
-  margin: 10px;
+  margin: 30px 15px 0 15px;
 }
 .a-pinned {
   width: 350px;
@@ -212,4 +212,49 @@ button:disabled {
   height: 100%;
   top: -100%;
   font-size: 40px;
+}
+
+@media only screen
+  and (max-width: 750px) {
+  .header-container {
+    display: flex;
+    background: linear-gradient(aliceblue, 50%, white);
+    flex-direction: column;
+    align-items: center;
+    height: 250px;
+  }
+  #header {
+    height: 95px;
+    width: 100vw;
+    border-bottom: solid;
+    border-bottom-color: black;
+    display: flex;
+    flex-direction: column;
+  }
+  .title {
+    font-family: 'Lato', sans-serif;
+    font-size: 40px;
+    font-weight: 400;
+    color: black;
+    margin: 10px auto 10px auto;
+    display: flex;
+    text-align: center;
+  }
+  .settings-link {
+    font-size: 15px;
+    color: black;
+    margin: 10px auto 10px auto;
+    display: flex;
+  }
+
+  #input-container, .cities {
+    padding-top: 20px;
+    display: flex;
+    width: 250px;
+    margin: auto;
+    align-items: center;
+  }
+  .settings-form {
+    width: 100vw;
+  }
 }
